fix: scrollbar colors for code editor

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,27 @@
   font-family: var(--font-outfit);
 }
 
+.custom-scrollbar::-webkit-scrollbar {
+  width: 20px;
+  height: 2px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #eab308;
+  border-radius: 6px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #ca8a04;
+}
+
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
